lab5/stale i static/staly wskaznik/out.log
a.cpp: In function ‘int main()’:
a.cpp:9:9: error: assignment of read-only variable ‘wsk’
    9 |     wsk = &b;
      |     ~~~~^~~~
